[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/time_controls.gd" id="1"]

[node name="TimeControls" type="CanvasLayer"]
layer = 3
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -340.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 112.0

[node name="Margin" type="MarginContainer" parent="Panel"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="DayProgress" type="HSlider" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.001
value = 0.25

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="PauseButton" type="Button" parent="Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
text = "Pause"

[node name="Speed1Button" type="Button" parent="Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
text = "x1"

[node name="Speed2Button" type="Button" parent="Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
text = "x2"

[node name="Speed5Button" type="Button" parent="Panel/Margin/VBox/HBox"]
unique_name_in_owner = true
text = "x5"
